# experiments

./: Makefile  README.md
.cursor/: AGENTS.md
.cursor/commands/: commit.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
linear-agent-v1/: CONTRIBUTING.md  Makefile
linear-agent-v1/src/: main.py
linear-agent-v1/tests/: test_main.py
linkedin-comments-v1/: .cursorignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMMANDS.md  Makefile  README.md  pyproject.toml
linkedin-comments-v1/.cursor/: AGENTS.md  hooks.json
linkedin-comments-v1/.cursor/commands/: _
linkedin-comments-v1/.cursor/hooks/: check-shell.sh  final-check.sh  setup-extensions.sh  setup.sh
linkedin-comments-v1/.cursor/rules/: bash.mdc  conventional-commits.mdc  python-async.mdc  python-core.mdc  python-security.mdc  python-standard.mdc  python-testing.mdc  python-types.mdc  shared-rules.mdc
linkedin-comments-v1/.github/: copilot-instructions.md
linkedin-comments-v1/docs/: ARCHITECTURE.md  ARCHITECTURE.mermaid  CHANGELOG.md  MEMORY_BANK.md  PROJECT_SPEC.md  TECHNICAL.md
linkedin-comments-v1/src/: main.py
linkedin-comments-v1/src/features/: __init__.py  auth_handler.py  comment_generator.py  feed_collector.py  post_analyzer.py
linkedin-comments-v1/src/lib/: analysis_prompt.txt  comment_prompt.txt  persona.txt
linkedin-comments-v1/src/services/: __init__.py  browser_manager.py  llm_client.py
linkedin-comments-v1/tests/: conftest.py  test_main.py
python-template/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-template/.cursor/commands/: commit.md
python-template/.github/prompts/: commit.prompt.md
