[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "AI-native Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
pytest-xdist = "^3.8.0"
ruff = "^0.14.3"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
bandit = "^1.8.6"
poethepoet = "^0.37.0"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poe tasks - npm-like scripts
[tool.poe.tasks]
_pre_commit_install = "pre-commit install"
_pre_commit_install_msg = "pre-commit install --hook-type commit-msg"

[tool.poe.tasks.post_install]
sequence = ["_pre_commit_install", "_pre_commit_install_msg"]
help = "Install pre-commit hooks after poetry install"

[tool.poe.tasks.setup]
sequence = ["install", "post_install"]
help = "Complete project setup"

[tool.poe.tasks.install]
cmd = "poetry install"
help = "Install dependencies"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run tests"

[tool.poe.tasks.test-cov]
cmd = "pytest --cov --cov-report=html"
help = "Run tests with coverage"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run linting"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix ."
help = "Run linting with auto-fix"

[tool.poe.tasks.format]
cmd = "ruff format ."
help = "Format code"

[tool.poe.tasks.type-check]
cmd = "mypy src/"
help = "Run type checking"

[tool.poe.tasks.pre-commit]
cmd = "pre-commit run --all-files"
help = "Run pre-commit on all files"

[tool.poe.tasks.security]
cmd = "bandit -c pyproject.toml -r src/"
help = "Run security checks"

[tool.poe.tasks.all]
sequence = ["lint-fix", "format", "type-check", "test"]
help = "Run all checks"

[tool.poe.tasks.clean]
shell = """
find . -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true
find . -type d -name "*.egg-info" -exec rm -rf {} + 2>/dev/null || true
find . -type d -name ".pytest_cache" -exec rm -rf {} + 2>/dev/null || true
find . -type d -name ".mypy_cache" -exec rm -rf {} + 2>/dev/null || true
find . -type d -name ".ruff_cache" -exec rm -rf {} + 2>/dev/null || true
rm -rf htmlcov/ dist/ build/
"""
help = "Clean up generated files"

# Ruff configuration - Comprehensive
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "N",      # pep8-naming
    "ASYNC",  # flake8-async
    "S",      # bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "AIR",    # Airflow
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",     # line too long (handled by formatter)
    "COM812",   # trailing comma missing (conflicts with formatter)
    "ISC001",   # single line implicit string concatenation (conflicts with formatter)
    "TD002",    # missing TODO author
    "TD003",    # missing TODO link
    "FIX002",   # allow TODO comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # Allow assert in tests
    "PLR2004",  # Allow magic values in tests
    "S105",     # Allow hardcoded passwords in tests
    "S106",     # Allow hardcoded passwords in tests
    "ARG",      # Allow unused arguments in tests
    "SLF001",   # Allow private member access in tests
]
"__init__.py" = [
    "F401",     # Allow unused imports in __init__.py
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["my_project"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

# mypy configuration - Strict
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
    "-ra",
    "--tb=short",
    "--maxfail=1",
    "-n=auto",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "class .*\\bProtocol\\):",
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit security checks
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]
